--- a/app/views/devise/_links.erb
+++ b/app/views/devise/_links.erb
@@ -20,6 +20,7 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
+    <%= provider_icon provider %>
     <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider) %><br />
   <% end -%>
 <% end -%>
