--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -23,10 +23,8 @@
     </script>
 </head>
 <body>
-<div id="wrap">
-    <div id="main-wrap">
-        <div id="beta">
-        </div>
+<div id="beta">
+</div>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
             <div class="nav-bar">
@@ -38,13 +36,20 @@
                 <div id="logo" title="preparedly">
                 </div>
             </a>
+<div id="about-wrap">
             <div id="main">
                 <%= yield %>
             </div>
-    </div>
+</div>            
+            
+<div id="about-bg">
 </div>
-<div id="footer">
-</div>
+
+	<div id="skyline">
+	</div>
+		<div id="about-green">
+	</div>
+
 <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <%= yield :javascript_yield %>
