Add logo to welcome email

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,6 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
+    <p><%= image_tag attachments['preparedly-red.png'].url -%></p>
     <h1>Welcome to Prepared.ly!</h1>
     <p><em>Thanks for joining and helping keep your neighborhood safe. Get started by</em></p>
     <ol>
