--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,5 +3,81 @@
     <%= render 'devise/menu/login_items' %>
     <li><%= link_to "About", page_path("about") %></li>
 <% end %>
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<div id="column-wrapper">
+    <div class="column-full">
+        <h3><a href="/">
+        <img src="assets/preparedly-bigblue.png" height="150px" width="300px">
+        </a></br>
+        Make staying prepared simple and easy</h3>
+    </div><!--end column-full-->     
+    <div id="space">
+    &nbsp;
+    </div>
+    <div class="column-full">
+        <h1>What is it?</h1>
+    </div><!--end column-full-->
+    <div class="column-full">
+       <div class="column">
+            <h2>overview</h2>
+            <p>Prepared.ly is a simple way for you stay informed and proactive about the ongoing threat of wildfires.</p>
+            <h2>Notifications</h2>
+            <p>Receive timely reminders from Austin Fire Department experts when there is a particular risk in your area, suggestions to remain proactive and National Weather Service “Red Flag” and “High Risk” warnings.</p>
+        </div>
+     
+        <div class="column">
+            <h2>Assessment</h2>
+            <p>Visualize your home’s proximity to the Wildland Urban Interface (WUI), understand local conditions and view your estimated realtime risk.
+</p>
+            <h2>Customized Advice</h2>
+            <p>Submit questions and receive answers unique to your property or situation.</p>
+        </div>
+    </div><!--end column-full-->    
+    <div class="column-full">
+        <h1>Features</h1>
+    </div> <!--end column-full-->
+    <div class="column-full">
+        <div class="column">
+            <h2>Local Conditions</h2>
+            <p>Review realtime conditions and understand how they relate to your area’s wildfire risk.
+                </p>
+            <h2>Goodwill</h2>
+            <p>Submit questions to the fire department about your home or property.
+                </p>    
+            <h2>Q &amp; A</h2>
+            <p>Use Prepared.ly to help less tech savvy neighbors with prevention efforts.
+                </p>
+            <h2>Get started!</h2>
+                <p>Prepare your home and property with simple tasks suggested by wildfire prevention experts.
+                </p>     
+        </div>
+        <div class="column">
+            <h2>Sharing</h2>
+                <p>Invite your neighbors and friends to participate in prevention efforts and community cleanup days.
+                </p>
+            <h2>On-Site Education</h2>
+                <p>Schedule on-site consultations for your home and neighborhood with wildfire prevention experts.
+                </p>
+            <h2>Guidance</h2>
+                <p>Review nationally accepted safety standards before making home and property improvements.
+                </p>            
+        </div>  
+     </div> <!--end column-full-->    
+</div> <!--end column wrapper-->
+
+
+
+
+
+
+
+
+
+
+<div id="about-bg">
+    </div>
+        
+<!--    <div id="skyline">
+    </div>
+    <div id="about-green">
+    </div>
+    -->
