--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,11 @@
                     <%= yield :nav_bar_items %>
                 </ul>
             </div>
-            <a href="/">
                 <div id="logo" title="preparedly">
-                </div>
-            </a>
+                            <a href="/">
+                            <img src="assets/preparedly-red.png" height="95px" width="217px">
+                            </a>
+                </div>            
             <div id="main">
                 <%= yield %>
             </div>
