--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,9 +1,9 @@
 body {
-  background-color: #fff;
+  /*background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px; }
+  line-height: 18px;*/ }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
