--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -15,14 +15,14 @@ pre {
   padding: 10px;
   font-size: 11px; }
 
-a {
+/*a {
   color: #000;
   &:visited {
     color: #666; }
   &:hover {
     color: #fff;
     background-color: #000; } }
-
+*/
 div {
   &.field, &.actions {
     margin-bottom: 10px; } }
