--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,14 +1,14 @@
 <% content_for :nav_bar_items do %>
     <%= render 'devise/menu/registration_items' %>
     <%= render 'devise/menu/login_items' %>
-    <li><%= link_to "About", page_path("about") %></li>
+    <li><%= link_to "about", page_path("about") %></li>
 <% end %>
 <div id="column-wrapper">
     <div class="column-full">
         <h3><a href="/">
         <img src="assets/preparedly-bigblue.png" height="150px" width="300px">
         </a></br>
-        Make staying prepared simple and easy</h3>
+        Make staying prepared </br>simple and easy</h3>
     </div><!--end column-full-->     
     <div id="space">
     &nbsp;
@@ -59,7 +59,10 @@
                 </p>
             <h2>Guidance</h2>
                 <p>Review nationally accepted safety standards before making home and property improvements.
-                </p>            
+                </p>     
+            <p>
+            <a href="../map"><button class="button blue signup big">Check it out!</button></a>
+            </p>           
         </div>  
      </div> <!--end column-full-->    
 </div> <!--end column wrapper-->
