--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,12 @@
                     <%= yield :nav_bar_items %>
                 </ul>
             </div>
+            <div id="logo-wrapper">
+              <a href="/">
                 <div id="logo" title="preparedly">
-                            <a href="/">
-                            <img src="assets/preparedly-red.png" height="95px" width="217px">
-                            </a>
-                </div>            
+                </div>
+              </a>
+              </div>
             <div id="main">
                 <%= yield %>
             </div>
