--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -10,4 +10,4 @@
     <%= submit_tag("Locate", :class => 'button blue') %>
 
 <% end %>
-<a href="">What is prepared.ly?</a></p>
+<a href="/about">What is prepared.ly?</a></p>
