--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :fb_og_tags do %>
-  <meta property="og:title" content="prepared.ly - Make staying prepared fun and easy!" />
+  <meta property="og:title" content="prepared.ly - Support fire-prepared homes and communities" />
   <meta property="og:type" content="company" /><meta property="og:site_name" content="prepared.ly" />
   <meta property="og:url" content="http://prepared.ly" />
   <meta property="og:image" content="https://launchrock-assets.s3.amazonaws.com/facebook-files/UPZ4FCUWFEtEXSu.png" />
