--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,11 @@
 <div id="footer">
 	<div id="footer-green">
 	</div>
+  <a href="contact"><div id="feedback"></div></a>
 	<div id="footer-bottom">
 	</div>
 </div>
+
 <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <%= yield :javascript_yield %>
