--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @message, :url => contact_path do |form| %>
+<%= form_for @feedback, :url => contact_path do |form| %>
   <div id="contact-detail">
   <fieldset class="fields">
     <div class="field">
