closes #5 put labels for the risk levels. /cc @emilyville

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <td class="risk risk-title">Risk of this location:</th>
-                <td class="risk risk-<%= @risk_level %>">Class <%= @risk_level %></td>
+                <td class="risk risk-<%= @risk_level %>"><%= @risk_text %></td>
             </tr>
             <tr>
                 <td colspan="2" class="note">Class 3 denotes a moderate risk based on your location, and proximity to wildlands.</td>
