--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,7 +3,7 @@
     <%= render 'devise/menu/login_items' %>
     <li><%= link_to "about", page_path("about") %></li>
 <% end %>
-<div id="column-wrapper">
+<div class="column-wrapper">
     <div class="column-full">
         <h3><a href="/">
         <img src="assets/preparedly-bigblue.png" height="150px" width="300px">
@@ -18,7 +18,7 @@
     </div><!--end column-full-->
     <div class="column-full">
        <div class="column">
-            <h2>overview</h2>
+            <h2>Overview</h2>
             <p>Prepared.ly is a simple way for you stay informed and proactive about the ongoing threat of wildfires.</p>
             <h2>Notifications</h2>
             <p>Receive timely reminders from Austin Fire Department experts when there is a particular risk in your area, suggestions to remain proactive and National Weather Service “Red Flag” and “High Risk” warnings.</p>
