Removed old About page, pointed nav links to new About page, lowercase in all nav

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :nav_bar_items do %>
     <%= render 'devise/menu/registration_items' %>
     <%= render 'devise/menu/login_items' %>
-    <li><%= link_to "About", page_path("about") %></li>
+    <li><%= link_to "about", about_path %></li>
 <% end %>
 
 <h2>Sign up</h2>
