--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -7,7 +7,7 @@
 <% content_for :nav_bar_items do %>
     <%= render 'devise/menu/registration_items' %>
     <%= render 'devise/menu/login_items' %>
-    <li><%= link_to "about", page_path("about") %></li>
+    <li><%= link_to "about", about_path %></li>
 <% end %>
 <div id="map-main">
 <div id="map-content-top">
