--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :nav_bar_items do %>
     <%= render 'devise/menu/registration_items' %>
     <%= render 'devise/menu/login_items' %>
-    <li><%= link_to "about", page_path("about") %></li>
+    <li><%= link_to "about", about_path %></li>
 <% end %>
 
 <h2>Thanks for signing up! Please tell others about prepared.ly</h2>
